<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.pastillacontrol.ui.home.HomeFragment"
        android:label="@string/home_title"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_homeFragment_to_medicationsFragment"
            app:destination="@id/medicationsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_scheduleEditorFragment"
            app:destination="@id/scheduleEditorFragment" />
        <action
            android:id="@+id/action_homeFragment_to_historyFragment"
            app:destination="@id/historyFragment" />
    </fragment>

    <fragment
        android:id="@+id/medicationsFragment"
        android:name="com.example.pastillacontrol.ui.medications.MedicationsFragment"
        android:label="@string/menu_medications"
        tools:layout="@layout/fragment_medications" />

    <fragment
        android:id="@+id/scheduleEditorFragment"
        android:name="com.example.pastillacontrol.ui.schedule.ScheduleEditorFragment"
        android:label="@string/menu_schedule"
        tools:layout="@layout/fragment_schedule_editor" />

    <fragment
        android:id="@+id/historyFragment"
        android:name="com.example.pastillacontrol.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />
</navigation>
